Fix spacing

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -117,7 +117,7 @@
 }
 
 .message {
-  min-height: 20px;
+  min-height: 24px;
   margin: 16px;
   text-align: center;
 }
